@@ -70,21 +70,21 @@ CatalystX::CRUD::Controller.
 sub form {
     my ( $self, $c ) = @_;
     $self->{_form} ||= $self->form_class->new( app => $c );
-    $self->{_field_names} ||= $self->{_form}->field_names;
     $self->{_form}->app($c) unless defined $self->{_form}->app;
     $self->{_form}->clear unless $self->{_form}->app->stash->{_form_called}->{ $self->action_namespace }++;
     return $self->{_form};
 }
 
-=head2 field_names
+=head2 field_names( I<context> )
 
 Returns an array ref of the field names in form.
 
 =cut
 
 sub field_names {
-    my ($self) = @_;
-    return $self->{_field_names};
+    my ($self, $c) = @_;
+    $self->throw_error("context required") unless defined $c;
+    return $self->form($c)->field_names;
 }
 
 =head2 all_form_errors
